# PDF_Manager

./: .gitignore  README.md  pyproject.toml
src/modules/: __init__.py  console.py  explorer.py  pdf_processor.py
src/pdf_manager/: main.py
src/pdf_manager/engine/: __init__.py  engine.py
src/pdf_manager/modules/: __init__.py  console.py  explorer.py  pdf_processor.py
src/pdf_manager/utils/: __init__.py  visuals.py
tests/: test_console.py  test_explorer.py  test_processor.py
